--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@koa/cors": "^2.2.3",
+    "@koa/router": "^8.0.1",
+    "json-server": "^0.15.1",
+    "koa": "^2.8.1",
+    "koa-bodyparser": "^4.2.1",
+    "mysql": "^2.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
